--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "keywords": [
     "templating"
   ],
-  "author": "Anvarzon Zurajev <anvarzon.zurajev@gmail.com>",
+  "author": "Anvarzon Zurajev <barcodex@gmail.com>",
   "license": "BSD-2-Clause",
   "bugs": {
     "url": "https://github.com/barcodex/bcx-scalar-modifier/issues"
